--- a/post.hbs
+++ b/post.hbs
@@ -13,11 +13,11 @@ into the {body} tag of the default.hbs template --}}
     <header class="article-header gh-canvas">
 
         <div class="article-tag post-card-tags">
-            {{#primary_tag}}
-                <span class="post-card-primary-tag">
+            {{#foreach tags}}
+                <span class="post-card-tag">
                     <a href="{{url}}">{{name}}</a>
                 </span>
-            {{/primary_tag}}
+            {{/foreach}}
             {{#if featured}}
                 <span class="post-card-featured">{{> "icons/fire"}} Featured</span>
             {{/if}}
